--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "install-client":"npm start",
+        "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false,npm install --prefix client && npm run build --prefix client",
         "start": "nodemon app.js"
     },
     "keywords": [],
