--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,9 @@
 {
   "name": "ecommerce-front",
   "version": "0.1.0",
+  "engines": {
+    "node": "v14.16.1"
+  },
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
