--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "name": "server-ecommerce",
     "version": "1.0.0",
+    "engines": {
+        "node": "v14.16.1"
+      },
     "description": "",
     "main": "index.js",
     "scripts": {
