--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "ecommerce-front",
   "version": "0.1.0",
   "engines": {
-    "node": "v14.16.1"
+    "node": "6.14.12"
   },
   "private": true,
   "dependencies": {
