--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "server-ecommerce",
     "version": "1.0.0",
     "engines": {
-        "node": "6.14.12"
+        "node": "v14.0.0"
       },
     "description": "",
     "main": "index.js",
